Use `--add-opens` to allow tests to pass on recent JDKs.
We make the same changes to `pom.xml` in the Android branch, even though they have no effect there. That's just to minimize differences between the two branches.

More progress toward https://github.com/google/guava/issues/5801 (maybe enough to close it?)

RELNOTES=n/a
PiperOrigin-RevId: 436528838